z-index fix?

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -418,6 +418,7 @@ h6 > {
     position: relative;
     min-width: 100vw;
     height: 105vh;
+    z-index: 41;
   }
 }
 
@@ -426,6 +427,7 @@ h6 > {
     position: relative;
     min-width: 480px;
     height: 770px;
+    z-index: 41;
     overflow-y: none;
   }
 }
